# Enlightenment

./: .gitignore  CMakeLists.txt  CONTRIB.md  LICENSE  README.md
zclient/: main.c
zclient/app/: core.h  event.h  window.h
zclient/app/linux-x64/: window.c
zclient/enc/algo/: aes.h  dh.h  rsa.h
zclient/enc/e2ee/: e2ee.h
zclient/enc/keymgr/: manager.h  serialization.h  store.h
zclient/enc/util/: crypto.h  hash.h
